[SCRUM-3757] Fixed issue with icon sizes, removed footer on mobile, fixed date detail panel.

--- a/src/ui.sass
+++ b/src/ui.sass
@@ -56,8 +56,13 @@ html
 body
     margin: 0 0 $footer-height
 
-    @media screen and (max-width: $phone-bp)
+    .fooer
+        display: none
+
+    @media screen and (min-width: $phone-bp)
         margin: 0 0 $mobile-footer-height
+        .footer
+            display: block
 
 .navigation::after
     height: 0;
@@ -91,8 +96,8 @@ body
 
     .main
         +flex(column)
-    //    height: 100vh
-    //    width: 100vw
+        //height: 100vh
+        //width: 100vw
 
     .headerBar
         +flex(column)
@@ -216,19 +221,14 @@ body
                 flex: 0 0 auto
                 width: 6em
 
-            .navPanelItem   // TODO: REMOVE?
-                +flex(column)
-                flex: 1
-                justify-content: flex-start
-                align-items: center
-
             .navPanelButtons
+                +flex(column)
                 position: fixed
                 top: 50%
-                +flex(column)
                 justify-content: flex-start
                 align-items: center
                 width: 6em
+                transform: translate3d(0, -50%, 0)
 
         .navBottomPanel
             +flex
@@ -322,10 +322,8 @@ body
 
             .moreIconSvg
                 fill: white
-                width: 1.2em
-                height: 1.2em
+                height: 1em
                 margin-left: 0.5em
-
 
         .versionDateDetailPanel
             +flex
@@ -333,7 +331,8 @@ body
             justify-content: center
             background: #545454
             color: white
-            transition: height 0.5s
+            transition: width 0.5s, height 0.5s, transform 0.3s
+            z-index: -1
 
             &.left
                 align-self: flex-start
@@ -354,12 +353,15 @@ body
                 flex: 0 0 auto
                 font-size: smaller
                 display: none
+                width: 25em // can't be auto otherwise it conflicts with transition
                 @media screen and (min-width: 400px)
                     display: inherit
 
             &.hidePanel
                 height: 0em
+                width: 0em
                 flex: 0 0 auto
+                transform: translate3d(0, -2em, 0)
 
         .arrowButton
             flex: 0 0 auto
@@ -385,9 +387,9 @@ body
 
         .arrow
             stroke: black
-            height: 5em
+            height: 4em
             @media screen and (min-width: $phone-bp)
-                height: 7.5em
+                height: 6em
 
         .rightArrow
             @extend .arrow
@@ -398,7 +400,7 @@ body
 
         .lockButton
             flex: 0 0 auto
-            margin-top: 1em
+            margin-top: 0.8em
             height: 30px
             width: 30px
             background-color: transparent
@@ -420,9 +422,9 @@ body
             fill: black
 
         .lockerIcon
-            height: 2em
+            height: 1.8em
             @media screen and (min-width: $phone-bp)
-                height: 2.3em
+                height: 2em
 
     .timelineWidget
         display: none
@@ -534,8 +536,8 @@ body
                 position: absolute
                 top: 0
                 left: 0
-                width: 3em
-                height: 3em
+                width: 2.4em
+                height: 2.4em
                 z-index: 15
                 border: none
                 outline: none
@@ -547,9 +549,9 @@ body
                         transform: scale(1.2)
 
                 .zoomOutIcon
-                    transition: transform 0.3s, fill 0.3s
-                    width: 2em
-                    height: 2em
+                    transition: transform 0.3s
+                    width: 1.6em
+                    height: 1.6em
 
 
         .timelineWidgetNavPanel
@@ -558,7 +560,7 @@ body
             .arrowButton
                 .timelineWidgetArrow
                     stroke: white
-                    height: 3em
+                    height: 2.4em
                 .timelineWidgetLeftArrow
                     @extend .timelineWidgetArrow
                     transform: rotate(180deg)
